--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,16 @@ a {
 a:hover {
   text-decoration: none;
 }
+
+section {
+  min-height: 100vh;
+  padding-top: 8rem;
+}
+
+section#landing {
+  padding-top: 0;
+}
+
+section#contact {
+  padding-bottom: 5rem;
+}
